Bug 295059 - Templates for new messages in kmail not working inside kontact
Summary: Templates for new messages in kmail not working inside kontact
Status: RESOLVED FIXED
Alias: None
Product: kontact
Classification: Applications
Component: mail (other bugs)
Version First Reported In: 4.8.x
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-02-29 11:13 UTC by pipapo
Modified: 2012-02-29 17:45 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description pipapo 2012-02-29 11:13:57 UTC
Version:           4.8.x (using KDE 4.8.0) 
OS:                Linux

Kmail is not working with the template for new messages inside kontact. It does work perfectly using kmail in stand-alone-mode outside kontact. This is valid only for new messages. The other templates for answering and forwarding working fine inside kontact.

Reproducible: Always

Steps to Reproduce:
Start a new mail kmail running inside kontact vs. start a new mail running standalone.

Actual Results:  
Template for new mails not working. 

Expected Results:  
Use templates insie kontact.
Comment 1 Laurent Montel 2012-02-29 11:57:47 UTC
could you paste your template here ?
Thanks
Comment 2 pipapo 2012-02-29 14:34:51 UTC
%CURSOR

Viele Grüße

%REM="Standardvorlage für Antworten"%-
Comment 3 Laurent Montel 2012-02-29 14:58:59 UTC
it's when on "new message" in toolbar ?

I can reproduce it when I click on "new message"
but whebn I click on "file"->"new"->"new message..." it works.
Could you test it just to know if it works as me ?

but yes it's a bug if we click on "new message" directly
Comment 4 Laurent Montel 2012-02-29 15:22:40 UTC
Git commit cd0e256b41ab6a216020e5b0efed8ffc16eb7003 by Montel Laurent.
Committed on 29/02/2012 at 16:22.
Pushed by mlaurent into branch 'master'.

Fix Bug 295059 - Templates for new messages in kmail not working inside kontact

FIXED-IN: 4.8.1

M  +2    -1    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/cd0e256b41ab6a216020e5b0efed8ffc16eb7003
Comment 5 Laurent Montel 2012-02-29 15:23:28 UTC
Git commit 52a8ce58d968cfa0dd02550f3de2ddcbeb01d596 by Montel Laurent.
Committed on 29/02/2012 at 16:22.
Pushed by mlaurent into branch 'KDE/4.8'.

Fix Bug 295059 - Templates for new messages in kmail not working inside kontact

FIXED-IN: 4.8.1
(cherry picked from commit cd0e256b41ab6a216020e5b0efed8ffc16eb7003)

M  +2    -1    kmail/kmkernel.cpp

http://commits.kde.org/kdepim/52a8ce58d968cfa0dd02550f3de2ddcbeb01d596
Comment 6 pipapo 2012-02-29 16:53:40 UTC
(In reply to comment #3)
> it's when on "new message" in toolbar ?
> 
> I can reproduce it when I click on "new message"
> but whebn I click on "file"->"new"->"new message..." it works.
> Could you test it just to know if it works as me ?
> 
> but yes it's a bug if we click on "new message" directly

Nice workaround. Works for me too.
Comment 7 Laurent Montel 2012-02-29 17:45:08 UTC
And fixed in 4.8.1 (will tag tomorrow :) )