Fix Bug 295059 - Templates for new messages in kmail not working inside kontact

FIXED-IN: 4.8.1
BUG: 295059